Bug 93275 - ot_languages array is not fully sorted
Summary: ot_languages array is not fully sorted
Status: RESOLVED FIXED
Alias: None
Product: HarfBuzz
Classification: Unclassified
Component: src (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Behdad Esfahbod
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-06 17:43 UTC by Yury Gribov
Modified: 2015-12-07 18:48 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Yury Gribov 2015-12-06 17:43:01 UTC
Array ot_languages (in src/hb-ot-tag.cc) is used for binary search (through bsearch function, in hb_ot_tag_from_language) but some of it's elements appear to be placed in invalid order. This may cause spurious search errors.

Here's a list of problems:
* two entries for "hz" (the first one is invalid)
* "sck" should be moved to after "sc"
* "vls" should be moved to after "vi"
* "wo" should be moved to before "wry"
Comment 1 Behdad Esfahbod 2015-12-07 09:31:39 UTC
Thanks.  Added a test, and fixed.
Comment 2 Yury Gribov 2015-12-07 18:20:58 UTC
Thanks, Behdad. Just wanted to mention that bug was found using SortChecker tool.
Comment 3 Yury Gribov 2015-12-07 18:48:32 UTC
Added a link just in case: https://github.com/yugr/sortcheck


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.